--- a/resume.html
+++ b/resume.html
@@ -77,6 +77,12 @@
             </p>
         </div>
 
+        <div class="text-center my-4"> 
+            <a href="resume.pdf" download="Ryan_Renemans_Resume.pdf" class="btn btn-primary"> 
+                Download Resume (PDF) 
+            </a> 
+        </div>
+
         <!-- professional summary -->
         <section class="mb-5">
             <h3 class="fw-bold border-bottom pb-2">Professional Summary</h3>
@@ -156,4 +162,5 @@
       crossorigin="anonymous"
     ></script>
   </body>
+
 </html>
