--- a/projects.html
+++ b/projects.html
@@ -45,7 +45,7 @@
             <div class="collapse navbar-collapse" id="navbarNav">
             <ul class="navbar-nav ms-auto">
                 <li class="nav-item">
-                <a class="nav-link active" href="home.html">Home</a>
+                <a class="nav-link active" href="index.html">Home</a>
                 </li>
                 <li class="nav-item">
                 <a class="nav-link" href="hobbies.html">Hobbies</a>
@@ -82,7 +82,7 @@
                 <div class="accordion-body">
                 <div class="row">
                     <div class="col-md-4">
-                    <img src="../resources/img/pants.jpg" class="img-fluid rounded" alt="Project 1 Image">
+                    <img src="pants.jpg" class="img-fluid rounded" alt="Project 1 Image">
                     </div>
                     <div class="col-md-8">
                     <h5>Project Description:</h5>
@@ -108,7 +108,7 @@
                 <div class="accordion-body">
                 <div class="row">
                     <div class="col-md-4">
-                    <img src="../resources/img/climb.jpg" class="img-fluid rounded" alt="Project 2 Image">
+                    <img src="climb.jpg" class="img-fluid rounded" alt="Project 2 Image">
                     </div>
                     <div class="col-md-8">
                     <h5>Project Description:</h5>
@@ -172,4 +172,5 @@
       crossorigin="anonymous"
     ></script>
   </body>
+
 </html>
