--- a/projects.html
+++ b/projects.html
@@ -60,6 +60,8 @@
                 alt="Logo"
                 style="height:40px; width:auto;"
                 />
+
+                <a href="Calendar/index.html" class="btn btn-primary ms-3">Calendar</a>
             </div>
             </div>
         </div>
@@ -174,3 +176,4 @@
   </body>
 
 </html>
+
