--- a/projects.html
+++ b/projects.html
@@ -53,6 +53,10 @@
                 <li class="nav-item">
                 <a class="nav-link" href="projects.html">Projects</a>
                 </li>
+                <li class="nav-item">
+                <a class="btn btn-success ms-2" href="Calendar/index.html">Calendar</a>
+                </li>
+
             </ul>
             <div class="d-flex ms-3">
                 <img
@@ -176,4 +180,5 @@
   </body>
 
 </html>
+
 
